# secret-store-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  _typos.toml  deny.toml
.github/: dependabot.yml  master-ruleset.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  token-rotation.md
.github/workflows/: ci.yml  publish.yml  token-rotation.yml
src/: lib.rs
src/aws/: builder.rs  client.rs  mod.rs  store.rs  types.rs
src/azure/: builder.rs  client.rs  mod.rs  store.rs  types.rs
src/common/: error.rs  mod.rs  types.rs  utils.rs
src/gcp/: builder.rs  client.rs  mod.rs  store.rs  types.rs
src/http/: builder.rs  client.rs  mod.rs  store.rs  types.rs
src/kms/: mod.rs  types.rs
src/memory/: mod.rs  types.rs
tests/: integration.rs
